--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-1.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-1.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 2-11-1</title>
+    <title>HTML and CSS for Complete Beginners: Example 2-11-1</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
-	</head>
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-	<body>
-		<section class="learn">
-			<!-- Practice area start -->
+  <body>
+    <section class="learn">
+      <!-- Practice area start -->
 
-			<h1>Sign in with your credentials</h1>
+      <h1>Sign in with your credentials</h1>
 
-			<!-- Practice area end -->
-		</section>
+      <form action="" method="post">
+        <div>
+          <label for="login-email">EMAIL ADDRESS </label>
+          <input type="email" name="login-email" id="login-email" autofocus />
+        </div>
 
-		<section class="preview" data-content="lesson 2-11: Using Forms and Buttons">
-			<img width="498px" src="images/reference/login-form.png" alt="Reference image" />
-		</section>
-	</body>
+        <div>
+          <label for="login-password">PASSWORD</label>
+          <input type="password" , name="login-password" id="login-password" />
+        </div>
+
+        <div>
+          <input type="checkbox" id="remember-me" name="remember-me" />
+          <label for="remember-me">Remember me</label>
+        </div>
+
+        <button>Sign In</button>
+      </form>
+
+      <!-- Practice area end -->
+    </section>
+
+    <section
+      class="preview"
+      data-content="lesson 2-11: Using Forms and Buttons"
+    >
+      <img
+        width="498px"
+        src="images/reference/login-form.png"
+        alt="Reference image"
+      />
+    </section>
+  </body>
 </html>
