--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-2.html
@@ -1,31 +1,171 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 2-11-2</title>
+    <title>HTML and CSS for Complete Beginners: Example 2-11-2</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
-	</head>
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-			<h1>Your Order</h1>
+      <h1>Your Order</h1>
 
+      <form>
+        <div>
+          <div>
+            <label for="Order-Name">Name</label>
+            <input
+              type="text"
+              name="Order-Name"
+              id="Order-Name"
+              placeholder="Your full name"
+              autofocus
+            />
+          </div>
+          <div>
+            <label for="Order-Email">Email address</label>
+            <input
+              type="email"
+              name="Order-Email"
+              id="Order-Email"
+              placeholder="chuck@roundhouse.com"
+              disabled
+            />
+          </div>
+        </div>
+        <div>
+          <label for="Order-Address1">Address</label>
+          <input
+            type="text"
+            name="Order-Address1"
+            id="Order-Address1"
+            placeholder="9 Augusta Street"
+          />
+          <input
+            type="text"
+            name="Order-Address2"
+            id="Order-Address2"
+            placeholder="Suite 122"
+          />
+        </div>
+        <div>
+          <div>
+            <label for="Order-City">City</label>
+            <input
+              type="text"
+              id="Order-City"
+              name="Order-City"
+              placeholder="New Jersey"
+            />
+          </div>
+          <div>
+            <label for="Order-State">State</label>
+            <select name="Order-State" id="Order-State">
+              <option value="New York">New York</option>
+              <option value="Alabama">Alabama</option>
+              <option value="Alaska">Alaska</option>
+              <option value="Arizona">Arizona</option>
+            </select>
+          </div>
+          <div>
+            <label for="Order-Zip">ZIP</label>
+            <input
+              type="text"
+              name="Order-Zip"
+              id="Order-Zip"
+              placeholder="726221"
+            />
+          </div>
+        </div>
+        <div>
+          <label for="Order-Color-Sample">
+            What color samples should we send you?
+          </label>
+          <input
+            type="checkbox"
+            name="Order-Color-Sample"
+            id="Order-Sample-White"
+            value="White"
+            disabled
+          />
+          <label for="Order-Sample-White">White</label>
+          <input
+            type="checkbox"
+            name="Order-Color-Sample"
+            id="Order-Sample-Magenta"
+            value="Magenta"
+            checked
+          />
+          <label for="Order-Sample-Magenta">Magenta</label>
+          <input
+            type="checkbox"
+            name="Order-Color-Sample"
+            id="Order-Sample-Burgundy"
+            value="Burgundy"
+          />
+          <label for="Order-Sample-Burgundy">Burgundy</label>
+          <input
+            type="checkbox"
+            name="Order-Color-Sample"
+            id="Order-Sample-Charcoal"
+            value="Charcoal"
+          />
+          <label for="Order-Sample-Charcoal">Charcoal</label>
+        </div>
+        <div>
+          <label>How large is your team?</label>
+          <input type="radio" name="Team-Size" id="Team-Small" value="1-5" />
+          <label for="Team-Small">1-5 people</label>
 
+          <input type="radio" name="Team-Size" id="Team-Medium" value="6-10" />
+          <label for="Team-Medium">6-10 people</label>
 
-			<!-- Practice area end -->
-		</section>
+          <input type="radio" name="Team-Size" id="Team-Large" value="10+" />
+          <label for="Team-Large">10+</label>
+        </div>
+        <div>
+          <label for="Order-Comment">Comments</label>
+          <textarea
+            id="Order-Comment"
+            name="Order-Comment"
+            rows="10"
+            col="30"
+          ></textarea>
+          <input
+            type="checkbox"
+            name="Order-Comment"
+            id="Order-CheckBox"
+            value="Yes"
+          />
+          <label for="Order-CheckBox">Sign up for special offers</label>
+        </div>
+        <button>Place Order</button>
+      </form>
 
-		<section class="preview" data-content="lesson 2-11: Using Forms and Buttons">
-			<img width="903px" src="images/reference/order-form.png" alt="Reference image" />
-		</section>
-	</body>
+      <!-- Practice area end -->
+    </section>
+
+    <section
+      class="preview"
+      data-content="lesson 2-11: Using Forms and Buttons"
+    >
+      <img
+        width="903px"
+        src="images/reference/order-form.png"
+        alt="Reference image"
+      />
+    </section>
+  </body>
 </html>
