--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-5.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-5.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 2-5</title>
+    <title>HTML and CSS for Complete Beginners: Example 2-5</title>
 
-		<style>
-			body {
-				line-height: 1.5;
-			}
+    <style>
+      body {
+        line-height: 1.5;
+      }
 
-			span {
-				background-color: lightgreen;
-			}
+      span {
+        background-color: lightgreen;
+      }
 
-			a {
-				outline: 1px solid lightcoral;
-			}
+      a {
+        outline: 1px solid lightcoral;
+      }
 
-			p {
-				outline: 1px solid cornflowerblue;
-			}
+      p {
+        outline: 1px solid cornflowerblue;
+      }
 
-			h1 {
-				outline: 1px solid yellowgreen;
-			}
+      h1 {
+        outline: 1px solid yellowgreen;
+      }
 
-			div {
-				outline: 1px solid blueviolet;
-			}
-		</style>
-	</head>
-	<body>
-
-	</body>
+      div {
+        outline: 1px solid blueviolet;
+      }
+    </style>
+  </head>
+  <body></body>
 </html>
