--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-7.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-7.html
@@ -1,60 +1,117 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 2-7</title>
+    <title>HTML and CSS for Complete Beginners: Example 2-7</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
-	</head>
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-	<body class="no-reference">
-		<section class="learn">
-			<!-- Practice area start -->
+  <body class="no-reference">
+    <section class="learn">
+      <!-- Practice area start -->
 
-			What is the Neubrutalism Web Design Trend?
+      <h1>What is the Neubrutalism Web Design Trend?</h1>
 
-			Move aside brutalism, there's a new web design trend in town. Welcome to the stage neubrutalism, which is a refreshing combination of the brutalist trend as well as the modern, minimalist trend that's graced our screens for many years now. Read on for key features of this new design including what to look out for, real-world examples, plus a few neubrutalist-inspired web design templates from ThemeForest.
+      <p>
+        Move aside
+        <a
+          href="https://en.wikipedia.org/wiki/Brutalist_architecture#:~:text=Brutalist%20architecture%20is%20an%20architectural,structural%20elements%20over%20decorative%20design."
+          target="_blank"
+          ><strong><em>brutalism</em></strong></a
+        >, there's a new web design trend in town. Welcome to the stage
+        neubrutalism, which is a refreshing combination of the brutalist trend
+        as well as the modern, minimalist trend that's graced our screens for
+        many years now. Read on for key features of this new design including
+        what to look out for, real-world examples, plus a few
+        neubrutalist-inspired web design templates from ThemeForest.
+      </p>
 
-			Okay, So What Actually Is Neubrutalism?
+      <h1>Okay, So What Actually Is Neubrutalism?</h1>
 
-			Friends (or foes) of the brutalism web design trend will know that it's a style that earned its name due to its affinity to brutalism in architecture, i.e. it rejects decorative pomp and ceremony in favor of rough, unfinished surfaces, unusual shapes, solid materials, and contrasting small features. The concrete-heavy Barbican in London is a classic example of brutalist architecture.
+      <p>
+        Friends (or foes) of the brutalism <em>web design trend</em> will know
+        that it's a style that earned its name due to its affinity to brutalism
+        in architecture, i.e. it rejects decorative pomp and ceremony in favor
+        of rough, unfinished surfaces, unusual shapes, solid materials, and
+        contrasting small features. The concrete-heavy Barbican in London is a
+        classic example of brutalist architecture.
+      </p>
 
-			It certainly won't be to everyone's tastes, but brutalist web design can be seen as rejecting the more popular, softer web and instead adopting harsh, raw, or uncomfortable forms. To see more examples of brutalist websites, check out brutalistwebsites.com.
+      <p>
+        It certainly won't be to everyone's tastes, but brutalist web design can
+        be seen as rejecting the more popular, softer web and instead adopting
+        harsh, raw, or uncomfortable forms. To see more examples of brutalist
+        websites, check out brutalistwebsites.com.
+      </p>
 
-			A Word on Neubrutalist Typography
+      <h1>A Word on Neubrutalist Typography</h1>
 
-			When you scroll through the neubrutalist website examples below you'll likely notice the typography used for the headings—they almost all use quirky grotesque typefaces.
+      <p>
+        When you scroll through the neubrutalist website examples below you'll
+        likely notice the typography used for the headings—they almost all use
+        quirky grotesque typefaces.
+      </p>
 
-			They're often a bit beyond what we'd define as grotesque (or grotesk) and drift into the display font world, but however you define them they certainly make an impact. Get unlimited access</strong> to plenty of grotesque web fonts on Envato Elements right now!
+      <p>
+        They're often a bit <strong><em>beyond</em></strong> what we'd define as
+        grotesque (or grotesk) and drift into the display font world, but
+        however you define them they certainly make an impact. Get unlimited
+        access to plenty of grotesque web fonts on Envato Elements right now!
+      </p>
 
-			“A grotesque sans serif font lacks a serif, which is a little extra stroke commonly seen at the end of some typefaces. It has, instead, a more abrupt edge.”
-			— Daisy Ein, 34 Best Grotesque Fonts
+      <blockquote>
+        “A grotesque sans serif font lacks a serif, which is a little extra
+        stroke commonly seen at the end of some typefaces. It has, instead, a
+        more abrupt edge.”
+        <p>— <cite>Daisy Ein, 34 Best Grotesque Fonts</cite></p>
+      </blockquote>
 
-			Real-World Examples of Neubrutalism
+      <h2>Real-World Examples of Neubrutalism</h2>
 
-			Read on for 10 examples of neubrutalist design hitting the web right now. Which is your favorite?
+      <p>
+        Read on for 10 examples of neubrutalist design hitting the web right
+        now. Which is your favorite?
+      </p>
 
-			1. Gumroad
+      <h3>1. Gumroad</h3>
 
-			Check out the muted, clashing, gradient-free colors combined with thick black outlines. Typography is modern and easy to read, setting it apart from the often clunkier styles preferred within brutalist design. Animations also help to modernize brutalist design.
+      <p>
+        Check out the muted, clashing, gradient-free colors combined with thick
+        black outlines. Typography is modern and easy to read, setting it apart
+        from the often clunkier styles preferred within brutalist design.
+        Animations also help to modernize brutalist design.
+      </p>
 
-			2. Figma
+      <h3>2. Figma</h3>
 
-			One of the most famous examples of neubrutalist web design, Figma avoids shadows across all imagery, instead opting for sharper, darker black lines surrounding the shapes. Clashing hues such as orange and yellow also feel a little challenging on the eye which helps them to stand out.
+      <p>
+        One of the most famous examples of neubrutalist web design, Figma avoids
+        shadows across all imagery, instead opting for sharper, darker black
+        lines surrounding the shapes. Clashing hues such as orange and yellow
+        also feel a little challenging on the eye which helps them to stand out.
+      </p>
 
-			This is an excerpt from this article on Tutsplus.
+      <p>This is an excerpt from this article on Tutsplus.</p>
 
-			<!-- Practice area end -->
-		</section>
+      <!-- Practice area end -->
+    </section>
 
-		<section class="preview" data-content="lesson 2-7: Text-related Elements">
-			<img width="336px" src="images/reference/no-reference.png" alt="no-reference" />
-		</section>
-	</body>
+    <section class="preview" data-content="lesson 2-7: Text-related Elements">
+      <img
+        width="336px"
+        src="images/reference/no-reference.png"
+        alt="no-reference"
+      />
+    </section>
+  </body>
 </html>
