--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-12.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-12.html
@@ -1,29 +1,90 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 2-12</title>
+    <title>HTML and CSS for Complete Beginners: Example 2-12</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
-	</head>
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-			<h1>Payouts</h1>
+      <h1>Payouts</h1>
 
-			<!-- Practice area end -->
-		</section>
+      <table border="10">
+        <thead>
+          <tr>
+            <th>PAYEE</th>
+            <th>AMOUNT</th>
+            <th>DATE</th>
+            <th>STATUS</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              John Wick <br />
+              Shoota Inc
+            </td>
+            <td>$42,272.23</td>
+            <td>Jan 13, 2022</td>
+            <td>Processing</td>
+          </tr>
+          <tr>
+            <td>
+              William Dafoe <br />
+              Spider Inc
+            </td>
+            <td>$27,221.00</td>
+            <td>Dec 07, 2021</td>
+            <td>Success</td>
+          </tr>
+          <tr>
+            <td>
+              Chuck Norris <br />
+              Roundhouse Inc
+            </td>
+            <td>$6,982.00</td>
+            <td>Oct 20, 2021</td>
+            <td>Success</td>
+          </tr>
+          <tr>
+            <td>
+              Nick Cage <br />
+              Convicts Inc
+            </td>
+            <td>$12,821.72</td>
+            <td>Oct 14, 2021</td>
+            <td>Reverted</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td>Total Paid</td>
+            <td colspan="3">$90,296.95</td>
+          </tr>
+        </tfoot>
+      </table>
 
-		<section class="preview" data-content="lesson 2-12: Displaying Tabular Data with Tables">
-			<img width="903" src="images/reference/table.png" alt="Reference image" />
-		</section>
-	</body>
+      <!-- Practice area end -->
+    </section>
+
+    <section
+      class="preview"
+      data-content="lesson 2-12: Displaying Tabular Data with Tables"
+    >
+      <img width="903" src="images/reference/table.png" alt="Reference image" />
+    </section>
+  </body>
 </html>
