--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-3-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-3-2.html
@@ -1,58 +1,101 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 3-3-2</title>
+    <title>HTML and CSS for Complete Beginners: Example 3-3-2</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			* {
-				box-sizing: border-box;
-			}
-		</style>
-	</head>
-	<body>
-		<section class="learn">
-			<!-- Practice area start -->
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-			<h1>Register a New Account</h1>
+      form button {
+        background-color: #039b92;
+      }
 
-			<form action="" method="post">
-				<div>
-					<label for="register-email">Email address</label>
-					<input type="email" name="register-email" id="register-email" value="chuck@roundhouse.com" disabled>
-				</div>
+      input[type="email"] input[type="text"] input[type="password"] {
+        border-color: white;
+        border: 1 px solid #ccc;
+      }
 
-				<div>
-					<label for="register-name">Name</label>
-					<input type="text" name="register-name" id="register-name" placeholder="Your full name">
-				</div>
+      input[disabled] {
+        background-color: #ccc;
+      }
 
-				<div>
-					<label for="register-password">Password</label>
-					<input type="password" name="register-password" id="register-password">
-				</div>
+      input[value="chuck@roundhouse.com"] {
+        border-color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <section class="learn">
+      <!-- Practice area start -->
 
-				<div>
-					<label for="register-c-password">Confirm Password</label>
-					<input type="password" name="register-c-password" id="register-c-password">
-				</div>
+      <h1>Register a New Account</h1>
 
-				<button>Register Account</button>
-			</form>
+      <form action="" method="post">
+        <div>
+          <label for="register-email">Email address</label>
+          <input
+            type="email"
+            name="register-email"
+            id="register-email"
+            value="chuck@roundhouse.com"
+            disabled
+          />
+        </div>
 
-			<!-- Practice area end -->
-		</section>
+        <div>
+          <label for="register-name">Name</label>
+          <input
+            type="text"
+            name="register-name"
+            id="register-name"
+            placeholder="Your full name"
+          />
+        </div>
 
-		<section class="preview" data-content="lesson 3-3: Using CSS Selectors">
-			<img width="704px" src="images/reference/register-form.png" alt="Reference image" />
-		</section>
-	</body>
+        <div>
+          <label for="register-password">Password</label>
+          <input
+            type="password"
+            name="register-password"
+            id="register-password"
+          />
+        </div>
+
+        <div>
+          <label for="register-c-password">Confirm Password</label>
+          <input
+            type="password"
+            name="register-c-password"
+            id="register-c-password"
+          />
+        </div>
+
+        <button>Register Account</button>
+      </form>
+      <button>Hello!</button>
+      <!-- Practice area end -->
+    </section>
+
+    <section class="preview" data-content="lesson 3-3: Using CSS Selectors">
+      <img
+        width="704px"
+        src="images/reference/register-form.png"
+        alt="Reference image"
+      />
+    </section>
+  </body>
 </html>
