--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-7.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-7.html
@@ -20,6 +20,16 @@
         box-sizing: border-box;
       }
 
+      .container {
+        background-color: rgb(124, 123, 123);
+        width: 20rem;
+        height: 8rem;
+        padding: 1rem;
+        border: 1rem solid;
+        border-color: red;
+        margin: 1rem;
+      }
+
       .wrapper {
         /* Don't worry about what flex means. */
         /* It's simply here for demo purposes. */
@@ -28,6 +38,18 @@
 
       .widget a {
         background-color: bisque;
+      }
+
+      .wrapper .widget img {
+        width: 4rem;
+      }
+
+      .wrapper .widget p img {
+        width: 1.4rem;
+      }
+
+      .wrapper .widget a img {
+        height: 1rem;
       }
     </style>
   </head>
@@ -82,6 +104,28 @@
           /></a>
         </div>
       </div>
+
+      <!--Testing box model-->
+
+      <!-- <div class="container"><p>Hi there</p></div> -->
+
+      <!-- block element -> in-line element -->
+      <!-- <p>
+        <img src="images/example/icon-arrow-green.svg" alt="Arrow green" />Hi
+        there
+      </p>
+
+      <img src="images/example/icon-arrow-green.svg" alt="Arrow green" />
+      <p>hi there</p> -->
+
+      <!--In line element -> in-line element -->
+      <!-- <a href="#"
+        >Comments
+        <img src="images/example/icon-arrow-right.svg" alt="Arrow right"
+      /></a>
+
+      <a href="#">Comments </a>
+      <img src="images/example/icon-arrow-right.svg" alt="Arrow right" /> -->
 
       <!-- Practice area end -->
     </section>
