--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/2-11-2.html
@@ -151,7 +151,7 @@
           />
           <label for="Order-CheckBox">Sign up for special offers</label>
         </div>
-        <button>Submit</button>
+        <input type="button" value="Place order" />
       </form>
 
       <!-- Practice area end -->
