--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-8-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-8-2.html
@@ -34,8 +34,8 @@
 
       .wrapper .widget {
         width: 100%;
-        min-width: 250px;
-        max-width: 300px;
+        min-width: 10rem;
+        max-width: 20rem;
         background-color: #f3f4f5;
         padding: 2rem;
       }
