--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-11-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-11-2.html
@@ -1,52 +1,80 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 3-11-2</title>
+    <title>HTML and CSS for Complete Beginners: Example 3-11-2</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			* {
-				box-sizing: border-box;
-			}
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-			body {
-				font-family: 'Poppins', sans-serif;
-			}
-		</style>
-	</head>
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+      body {
+        font-family: "Poppins", sans-serif;
+      }
 
-			<header>
-				<a href=""><img src="images/example/logo.svg" alt="Logo"></a>
+      nav ul {
+        list-style-type: none;
+      }
 
-				<nav>
-					<ul>
-						<li><a href="">Portfolio</a></li>
-						<li><a href="">Services</a></li>
-						<li><a href="">Blog</a></li>
-						<li><a href="">About Me</a></li>
-						<li><a href="">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+      nav ul li {
+        display: inline-block;
+        padding: 0.5rem;
+      }
 
-			<!-- Practice area end -->
-		</section>
+      nav ul li a {
+        text-decoration: none;
+        color: black;
+        font-weight: 700;
+      }
+    </style>
+  </head>
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-		<section class="preview" data-content="lesson 3-11: Styling Lists in CSS">
-			<img width="945px" src="images/reference/header.png" alt="Reference image" />
+      <header>
+        <a href=""><img src="images/example/logo.svg" alt="Logo" /></a>
 
-			<p>Logo from Envato Elements: <br><br><a href="https://elements.envato.com/low-poly-fox-logo-CYUG7T" target="_blank">Low poly Fox logo</a></p>
-		</section>
-	</body>
+        <nav>
+          <ul>
+            <li><a href="">Portfolio</a></li>
+            <li><a href="">Services</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">About Me</a></li>
+            <li><a href="">Contact</a></li>
+          </ul>
+        </nav>
+      </header>
+
+      <!-- Practice area end -->
+    </section>
+
+    <section class="preview" data-content="lesson 3-11: Styling Lists in CSS">
+      <img
+        width="945px"
+        src="images/reference/header.png"
+        alt="Reference image"
+      />
+
+      <p>
+        Logo from Envato Elements: <br /><br /><a
+          href="https://elements.envato.com/low-poly-fox-logo-CYUG7T"
+          target="_blank"
+          >Low poly Fox logo</a
+        >
+      </p>
+    </section>
+  </body>
 </html>
