--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-13-2.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-13-2.html
@@ -1,105 +1,133 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 3-13-2</title>
+    <title>HTML and CSS for Complete Beginners: Example 3-13-2</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			* {
-				box-sizing: border-box;
-			}
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-			body {
-				font-family: 'Poppins', sans-serif;
-				color: rgb(19, 42, 59);
-			}
+      body {
+        font-family: "Poppins", sans-serif;
+        color: rgb(19, 42, 59);
+      }
 
-			.learn {
-				padding: 8rem;
-			}
+      .learn {
+        background-image: url("images/example/patterns.png");
+        padding: 8rem;
+      }
 
-			.container {
-				background-color: rgba(255, 255, 255, 0.8);
-				padding: 4rem;
-				text-align: center;
-				margin: 0 auto;
-			}
+      .container {
+        background-color: rgba(255, 255, 255, 0.8);
+        padding: 4rem;
+        text-align: center;
+        margin: 0 auto;
+      }
 
-			h1 {
-				font-size: 54px;
-				font-weight: 900;
-				letter-spacing: -1px;
-				margin: 4rem 0 2rem;
-				line-height: 1.3;
-			}
+      h1 {
+        font-size: 54px;
+        font-weight: 900;
+        letter-spacing: -1px;
+        margin: 4rem 0 2rem;
+        line-height: 1.3;
+      }
 
-			h2 {
-				font-size: 24px;
-				font-weight: 400;
-				color: rgba(19, 42, 59, .80);
-				line-height: 1.5;
-				margin-bottom: 4rem;
-			}
+      h2 {
+        font-size: 24px;
+        font-weight: 400;
+        color: rgba(19, 42, 59, 0.8);
+        line-height: 1.5;
+        margin-bottom: 4rem;
+      }
 
-			.features {
-				list-style: none;
-				padding: 0;
-				display: flex;
-				gap: 0.75rem;
-				justify-content: center;
-				margin-bottom: 4rem;
-			}
+      .features {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        gap: 0.75rem;
+        justify-content: center;
+        margin-bottom: 4rem;
+      }
 
-			.features li {
-				white-space: nowrap;
-				padding-left: 2rem;
-				color: rgba(19, 42, 59, .80);
-			}
+      .features li {
+        white-space: nowrap;
+        padding-left: 2rem;
+        color: rgba(19, 42, 59, 0.8);
+        background-image: url("images/example/green-checkmark.svg");
+        background-repeat: no-repeat;
+      }
 
-			.btn {
-				display: inline-block;
-				padding: 1rem 2rem;
-				color: white;
-				text-decoration: none;
-				border-radius: 4px;
-			}
-		</style>
-	</head>
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+      .btn {
+        display: inline-block;
+        padding: 1rem 2rem;
+        color: white;
+        text-decoration: none;
+        border-radius: 4px;
+        background-image: linear-gradient(20deg, red, purple);
+      }
 
-			<div class="container">
-				<img src="images/example/envato-elements-logo-vector.svg" alt="Envato Elements logo">
-				<h1>The unlimited creative subscription</h1>
-				<h2>Unlimited downloads of 60+ million creative assets. From just €14.50/month.</h2>
+      .btn:hover {
+        background-image: linear-gradient(20deg, blue, white);
+      }
+    </style>
+  </head>
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-				<ul class="features">
-					<li>Stock Videos</li>
-					<li>Music</li>
-					<li>Photos & Graphics</li>
-				</ul>
+      <div class="container">
+        <img
+          src="images/example/envato-elements-logo-vector.svg"
+          alt="Envato Elements logo"
+        />
+        <h1>The unlimited creative subscription</h1>
+        <h2>
+          Unlimited downloads of 60+ million creative assets. From just
+          €14.50/month.
+        </h2>
 
-				<a href="#" class="btn">Start 7-day free trial</a>
-			</div>
+        <ul class="features">
+          <li>Stock Videos</li>
+          <li>Music</li>
+          <li>Photos & Graphics</li>
+        </ul>
 
-			<!-- Practice area end -->
-		</section>
+        <a href="#" class="btn">Start 7-day free trial</a>
+      </div>
 
-		<section class="preview" data-content="Lesson 3-13: Styling Backgrounds in CSS">
-			<img width="1112px" src="images/reference/patterns.png" alt="Reference image" />
-			<p>
-				Graphic patterns from Envato Elements: <br><br>
-				<a href="https://elements.envato.com/geometric-patterns-S5J9EJ" target="_blank">Geometric Patterns</a><br>
-			</p>
-		</section>
-	</body>
+      <!-- Practice area end -->
+    </section>
+
+    <section
+      class="preview"
+      data-content="Lesson 3-13: Styling Backgrounds in CSS"
+    >
+      <img
+        width="1112px"
+        src="images/reference/patterns.png"
+        alt="Reference image"
+      />
+      <p>
+        Graphic patterns from Envato Elements: <br /><br />
+        <a
+          href="https://elements.envato.com/geometric-patterns-S5J9EJ"
+          target="_blank"
+          >Geometric Patterns</a
+        ><br />
+      </p>
+    </section>
+  </body>
 </html>
