--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-9.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/3-9.html
@@ -1,130 +1,172 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 3-9</title>
+    <title>HTML and CSS for Complete Beginners: Example 3-9</title>
 
-		<!-- This CSS and font is purely for presentational purposes. -->
-		<link rel="stylesheet" href="css/presentation.css" />
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet" />
+    <!-- This CSS and font is purely for presentational purposes. -->
+    <link rel="stylesheet" href="css/presentation.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<style>
-			* {
-				box-sizing: border-box;
-			}
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-			.wrapper {
-				/* Don't worry about what flex or gap means. */
-				/* It's simply here for demo purposes. */
-				display: flex;
-				gap: 2rem;
-			}
+      .wrapper {
+        /* Don't worry about what flex or gap means. */
+        /* It's simply here for demo purposes. */
+        display: flex;
+        gap: 2rem;
+      }
 
-			.widget {
-				width: 100%;
-				min-width: 250px;
-				max-width: 300px;
-				padding: 2rem;
-			}
+      .widget {
+        width: 100%;
+        min-width: 250px;
+        max-width: 300px;
+        padding: 2rem;
+        border-style: solid;
+        border-color: #dee1e4;
+        border-width: 0.1rem;
+        border-radius: 0.2rem;
+      }
 
-			.widget img {
-				width: 4rem;
-			}
+      .widget:hover {
+        border-color: black;
+      }
 
-			.main-icon {
-				/* The display property is used for demo purposes. */
-				display: block;
-				margin-bottom: 2rem;
-				/* margin-left: -65px; */
-			}
+      .widget:active {
+        border-color: green;
+      }
 
-			.widget p img {
-				width: 1.25rem;
-			}
+      .widget img {
+        width: 4rem;
+      }
 
-			.widget button img {
-				height: 1rem;
-			}
+      .main-icon {
+        /* The display property is used for demo purposes. */
+        display: block;
+        margin-bottom: 2rem;
+        /* margin-left: -65px; */
+      }
 
-			.widget button {
-				padding: 8px 24px;
-				background-color: white;
-			}
+      .widget p img {
+        width: 1.25rem;
+      }
 
-			.widget h2,
-			.widget p {
-				margin: 0;
-			}
+      .widget button img {
+        height: 1rem;
+      }
 
-			.widget h2 {
-				/* Notice the collapsing margin */
-				margin: .5rem 0;
-			}
+      .widget button {
+        padding: 8px 24px;
+        background-color: white;
+        border-radius: 0.4rem;
+      }
 
-			.widget p {
-				margin-bottom: 2rem;
-			}
+      .widget h2,
+      .widget p {
+        margin: 0;
+      }
 
-			.widget p img {
-				/* margin-right: 8px; */
-				margin: 0 8px 0 0;
-			}
-		</style>
-	</head>
-	<body class="flip">
-		<section class="learn">
-			<!-- Practice area start -->
+      .widget h2 {
+        /* Notice the collapsing margin */
+        margin: 0.5rem 0;
+      }
 
-			<h1>Dashboard</h1>
+      .widget p {
+        margin-bottom: 2rem;
+      }
 
-			<div class="wrapper">
-				<div class="widget">
-					<img src="images/example/icon-money.svg" class="main-icon" alt="Icon">
-					<h2>$4,502</h2>
-					<p>Earned this month</p>
-					<p>
-						<img src="images/example/icon-arrow-green.svg" alt="Arrow green">+6.05% <span>than last month</span>
-					</p>
-					<button>
-						Earnings
-						<img src="images/example/icon-arrow-right.svg" alt="Arrow right">
-					</button>
-				</div>
-				<div class="widget">
-					<img src="images/example/icon-sales.svg" class="main-icon" alt="Icon">
-					<h2>22</h2>
-					<p>New Sales</p>
-					<p>
-						<img src="images/example/icon-arrow-green.svg" alt="Arrow green">+16.64% <span>than last month</span>
-					</p>
-					<button>
-						Sales
-						<img src="images/example/icon-arrow-right.svg" alt="Arrow right">
-					</button>
-				</div>
-				<div class="widget">
-					<img src="images/example/icon-chat.svg" class="main-icon" alt="Icon">
-					<h2>7</h2>
-					<p>New comments</p>
-					<p>
-						<img src="images/example/icon-arrow-red.svg" alt="Arrow red"> -19% <span>than last month</span>
-					</p>
-					<button>
-						Comments
-						<img src="images/example/icon-arrow-right.svg" alt="Arrow right">
-					</button>
-				</div>
-			</div>
+      .widget p img {
+        /* margin-right: 8px; */
+        margin: 0 8px 0 0;
+      }
+    </style>
+  </head>
+  <body class="flip">
+    <section class="learn">
+      <!-- Practice area start -->
 
-			<!-- Practice area end -->
-		</section>
+      <h1>Dashboard</h1>
 
-		<section class="preview" data-content="lesson 3-9: Working with Borders in CSS">
-			<img width="971px" src="images/reference/dashboard.png" alt="Reference image" />
-		</section>
-	</body>
+      <div class="wrapper">
+        <div class="widget">
+          <img
+            src="images/example/icon-money.svg"
+            class="main-icon"
+            alt="Icon"
+          />
+          <h2>$4,502</h2>
+          <p>Earned this month</p>
+          <p>
+            <img
+              src="images/example/icon-arrow-green.svg"
+              alt="Arrow green"
+            />+6.05% <span>than last month</span>
+          </p>
+          <button>
+            Earnings
+            <img src="images/example/icon-arrow-right.svg" alt="Arrow right" />
+          </button>
+        </div>
+        <div class="widget">
+          <img
+            src="images/example/icon-sales.svg"
+            class="main-icon"
+            alt="Icon"
+          />
+          <h2>22</h2>
+          <p>New Sales</p>
+          <p>
+            <img
+              src="images/example/icon-arrow-green.svg"
+              alt="Arrow green"
+            />+16.64% <span>than last month</span>
+          </p>
+          <button>
+            Sales
+            <img src="images/example/icon-arrow-right.svg" alt="Arrow right" />
+          </button>
+        </div>
+        <div class="widget">
+          <img
+            src="images/example/icon-chat.svg"
+            class="main-icon"
+            alt="Icon"
+          />
+          <h2>7</h2>
+          <p>New comments</p>
+          <p>
+            <img src="images/example/icon-arrow-red.svg" alt="Arrow red" /> -19%
+            <span>than last month</span>
+          </p>
+          <button>
+            Comments
+            <img src="images/example/icon-arrow-right.svg" alt="Arrow right" />
+          </button>
+        </div>
+      </div>
+
+      <!-- Practice area end -->
+    </section>
+
+    <section
+      class="preview"
+      data-content="lesson 3-9: Working with Borders in CSS"
+    >
+      <img
+        width="971px"
+        src="images/reference/dashboard.png"
+        alt="Reference image"
+      />
+    </section>
+  </body>
 </html>
