--- a/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/4-1.html
+++ b/Front-End/HTML5&CSS3&JS/Envato Tuts HTML5&CSS3/Class files/4-1.html
@@ -1,17 +1,86 @@
 <!DOCTYPE html>
 <html lang="en-US">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-		<title>HTML and CSS for Complete Beginners: Example 4-1 - Simple landing page</title>
+    <title>
+      HTML and CSS for Complete Beginners: Example 4-1 - Simple landing page
+    </title>
 
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700;900&display=swap" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600;700;900&display=swap"
+      rel="stylesheet"
+    />
 
-		<link rel="stylesheet" href="css/4-1.css">
-	</head>
-	<body>
-	</body>
+    <link rel="stylesheet" href="css/4-1.css" />
+  </head>
+  <body>
+    <header id="main-header">
+      <div class="container">
+        <a href=""
+          ><img
+            src="images/landing-page/logo.svg"
+            alt="Logo for furniture company"
+        /></a>
+        <h1>Modern Chairs Crafted with Love</h1>
+        <h2>We love creating high quality and comfortable chairs</h2>
+        <a href="$our-chairs" class="btn">Discover our chair selection</a>
+      </div>
+    </header>
+    <section id="our-chairs">
+      <div class="container">
+        <header>
+          <p class="section-intro">The Selection</p>
+          <h3>Our Chairs</h3>
+          <p>
+            We mostly sell one-off items. That means that we make one-of-a-kind
+            furniture pieces so whoever buys it will have a unique item.
+          </p>
+        </header>
+
+        <div class="gallery">
+          <div>
+            <img src="images/landing-page/furniture-1.jpg" alt="Furniture" />
+            <p class="number">01</p>
+            <h4>Tufted white leather sofa chair</h4>
+            <p>
+              This will fit perfectly in any beauty salon or modern home thanks
+              to its timeless design.
+            </p>
+            <p>$289</p>
+          </div>
+          <div>
+            <img src="images/landing-page/furniture-2.jpg" alt="Furniture" />
+            <p class="number">02</p>
+            <h4>Black and brown wooden chair</h4>
+            <p>
+              Both minimalistic and comfortable, this is a great choice for home
+              or office.
+            </p>
+            <p>$$99</p>
+          </div>
+          <div>
+            <img src="images/landing-page/furniture-3.jpg" alt="Furniture" />
+            <p class="number">03</p>
+            <h4>Rustic wooden bar stool</h4>
+            <p>
+              Made from solid beech wood, this piece will fit nicely in your
+              rustic kitchen.
+            </p>
+            <p>$139</p>
+          </div>
+        </div>
+        <p>
+          Interested in our products?<a href="#contact"> Send us a message</a>
+          or <a href="store">visit our stores</a>
+        </p>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="container"></div>
+    </section>
+  </body>
 </html>
