Final js advance

--- a/Front-End/HTML5&CSS3&JS/BroCode JS/63.Mouse Events/index.html
+++ b/Front-End/HTML5&CSS3&JS/BroCode JS/63.Mouse Events/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="btn1">START</button>
-    <button id="btn2">STOP</button>
+    <div class="wrapper">
+      <div class="container" id="container">
+        <p class="container__p" id="myTxt">Click me 🤪</p>
+      </div>
+    </div>
+
     <script src="index.js"></script>
   </body>
 </html>
