--- a/Front-End/HTML5&CSS3&JS/BroCode JS/64. Key Events/index.html
+++ b/Front-End/HTML5&CSS3&JS/BroCode JS/64. Key Events/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="btn1">START</button>
-    <button id="btn2">STOP</button>
+    <div class="container" id="myBox">
+      <p class="container__p" id="myTxt"></p>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
