--- a/Front-End/HTML5&CSS3&JS/BroCode JS/65.HideShow/index.html
+++ b/Front-End/HTML5&CSS3&JS/BroCode JS/65.HideShow/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="btn1">START</button>
-    <button id="btn2">STOP</button>
+    <button id="btn" class="btn">Hide</button>
+
+    <img class="image" id="image" src="Cristiano_Ronaldo_20120609.jpg" alt="" />
     <script src="index.js"></script>
   </body>
 </html>
