--- a/Front-End/HTML5&CSS3&JS/BroCode JS/66. NodeLists/index.html
+++ b/Front-End/HTML5&CSS3&JS/BroCode JS/66. NodeLists/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button id="btn1">START</button>
-    <button id="btn2">STOP</button>
+    <div class="btn-container">
+      <button class="btn">Button1</button>
+      <button class="btn">Button2</button>
+      <button class="btn">Button3</button>
+      <button class="btn">Button4</button>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
